rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__test_sort_relations_5.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"select oid as oid from (select count(oid) as oid from pg_class order by count(oid)) t\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+-----+
| oid |
+-----+
| 6   |
+-----+
