rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__test_sort_relations_7.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"select * from (select oid from pg_class group by pg_class.oid order by pg_class.oid) t\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+-------+
| oid   |
+-------+
| 18000 |
| 18016 |
| 18023 |
+-------+
