rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__thought_spot_tables.snap
---
source: cubesql/src/compile/mod.rs
assertion_line: 7361
expression: "execute_query(\"SELECT * FROM (SELECT CAST(current_database() AS VARCHAR(124)) AS TABLE_CAT, table_schema AS TABLE_SCHEM, table_name AS TABLE_NAME, CAST( CASE table_type WHEN 'BASE TABLE' THEN CASE WHEN table_schema = 'pg_catalog' OR table_schema = 'information_schema' THEN 'SYSTEM TABLE' WHEN table_schema = 'pg_toast' THEN 'SYSTEM TOAST TABLE' WHEN table_schema ~ '^pg_' AND table_schema != 'pg_toast' THEN 'TEMPORARY TABLE' ELSE 'TABLE' END WHEN 'VIEW' THEN CASE WHEN table_schema = 'pg_catalog' OR table_schema = 'information_schema' THEN 'SYSTEM VIEW' WHEN table_schema = 'pg_toast' THEN NULL WHEN table_schema ~ '^pg_' AND table_schema != 'pg_toast' THEN 'TEMPORARY VIEW' ELSE 'VIEW' END WHEN 'EXTERNAL TABLE' THEN 'EXTERNAL TABLE' END AS VARCHAR(124)) AS TABLE_TYPE, REMARKS, '' as TYPE_CAT, '' as TYPE_SCHEM, '' as TYPE_NAME,  '' AS SELF_REFERENCING_COL_NAME, '' AS REF_GENERATION  FROM svv_tables) WHERE true  AND current_database() = 'cubedb' AND TABLE_TYPE IN ( 'TABLE', 'VIEW', 'EXTERNAL TABLE')  ORDER BY TABLE_TYPE,TABLE_SCHEM,TABLE_NAME\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+-----------+-------------+---------------------------+------------+---------+----------+------------+-----------+---------------------------+----------------+
| TABLE_CAT | TABLE_SCHEM | TABLE_NAME                | TABLE_TYPE | remarks | TYPE_CAT | TYPE_SCHEM | TYPE_NAME | SELF_REFERENCING_COL_NAME | REF_GENERATION |
+-----------+-------------+---------------------------+------------+---------+----------+------------+-----------+---------------------------+----------------+
| cubedb    | public      | KibanaSampleDataEcommerce | TABLE      | NULL    |          |            |           |                           |                |
| cubedb    | public      | Logs                      | TABLE      | NULL    |          |            |           |                           |                |
| cubedb    | public      | MultiTypeCube             | TABLE      | NULL    |          |            |           |                           |                |
| cubedb    | public      | NumberCube                | TABLE      | NULL    |          |            |           |                           |                |
| cubedb    | public      | WideCube                  | TABLE      | NULL    |          |            |           |                           |                |
+-----------+-------------+---------------------------+------------+---------+----------+------------+-----------+---------------------------+----------------+
