rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__views_postgres.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT * FROM information_schema.views\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+---------------+--------------+------------+-----------------+--------------+--------------+--------------------+----------------------+----------------------+----------------------------+
| table_catalog | table_schema | table_name | view_definition | check_option | is_updatable | is_insertable_into | is_trigger_updatable | is_trigger_deletable | is_trigger_insertable_into |
+---------------+--------------+------------+-----------------+--------------+--------------+--------------------+----------------------+----------------------+----------------------------+
+---------------+--------------+------------+-----------------+--------------+--------------+--------------------+----------------------+----------------------+----------------------------+
